daemonSet.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: redis-service
  namespace: jobs
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: pod1
      labels:
        app: nginx
    spec:
      containers:
        - name: agent1
          image: nginx
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
