demo-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: node:24-alpine

        command:
        - sh
        - -c

        args:
        - |
          [...]
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc

spec:
  selector:
    app: backend

  ports:
  - port: 5000
    targetPort: 3000
