ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: ingress
  annotations:
   nginx.ingress.kubernetes.io/use-regex: "true"
   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/jenkins/"
            backend:
              service:
                name: jenkins-svc
                port: 
                  number: 8080
          - pathType: Prefix
            path: "/grafana/"
            backend:
              service:
                name: grafana-svc
                port: 
                  number: 3000
          - pathType: Prefix
            path: "/app(/|$)(.*)"
            backend:
              service:
                name: backend-svc
                port: 
                  number: 5000
          - pathType: Prefix
            path: "/ip/"
            backend:
              service:
                name: ip-svc
                port: 
                  number: 5001
